- Modificada pagina HTML de error en Disponibilidad de cubiculos - Añadido about del proyecto

--- a/app/src/main/res/raw/error.html
+++ b/app/src/main/res/raw/error.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Error page</title>
-    </head>
-    <body>
-        <h2>Página no disponible</h2>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Error page</title>
+</head>
+<body>
+    <div style="border: 30px solid transparent">
+      <h1>Página no disponible</h1>
+      <img src="errorimg.png" align="left">
+      <br>
+      <p>No es posible acceder al servidor</p>
+      <ul>
+          <li>Asegurese de estar conectado a una red del TEC</li>
+          <li>Verifique su conexión a Internet</li>
+      </ul>
+    </div>
+</body>
 </html>
