--- a/app/src/main/res/raw/about.html
+++ b/app/src/main/res/raw/about.html
@@ -11,10 +11,8 @@
         <br>
         <img src="smartteclogo.png" align="left" style="width:20%; padding-bottom:0%">
         <p>
-            SmartTEC es una aplicación desarrollada para la comunidad TEC, como un proyecto
-            para el curso de Redes de la carrera de Ingeniería en Computación San Carlos.
-            Nuestro proposito es brindar acceso a los servicios que ofrece la institución de una manera
-            mas sencilla.
+            SmartTEC es una aplicación desarrollada para la comunidad TEC, como un proyecto para el curso de Redes de la carrera de Ingeniería en Computación San Carlos.
+            Nuestro propósito es brindar acceso a los servicios que ofrece la institución de una manera mas sencilla.
         </p>
 
     <br>
